# BattleTrs

./: .gitignore  Cargo.toml  README.md  run_server.sh
.cargo/: config.toml
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/battletris-web-wasm/code/: code-generation-summary.md
aidlc-docs/construction/battletris-web-wasm/functional-design/: functional-design.md
aidlc-docs/construction/build-and-test/: build-and-test-summary.md  build-instructions.md  integration-test-instructions.md  performance-test-instructions.md  unit-test-instructions.md
aidlc-docs/construction/core-engine/code/: build-notes.md  code-summary.md
aidlc-docs/construction/plans/: core-engine-code-generation-plan.md  core-engine-functional-design-plan.md  network-and-db-code-generation-plan.md  network-and-db-functional-design-plan.md  weapons-and-ai-code-generation-plan.md  weapons-and-ai-functional-design-plan.md
aidlc-docs/inception/application-design/: application-design.md  browser-client-application-design.md  browser-client-component-dependency.md  browser-client-component-methods.md  browser-client-components.md  browser-client-services.md  component-dependency.md  component-methods.md  components.md  services.md  unit-of-work-dependency.md  unit-of-work-story-map.md  unit-of-work.md
aidlc-docs/inception/plans/: application-design-plan.md  browser-client-application-design-plan.md  browser-client-execution-plan.md  browser-client-units.md  execution-plan.md  unit-of-work-plan.md
aidlc-docs/inception/requirements/: browser-client-requirement-questions.md  browser-client-requirements.md  requirement-verification-questions.md  requirements.md
aidlc-docs/inception/reverse-engineering/: api-documentation.md  architecture.md  business-overview.md  code-quality-assessment.md  code-structure.md  component-inventory.md  dependencies.md  reverse-engineering-timestamp.md  technology-stack.md
battletris-client/: Cargo.toml
battletris-client/src/: ernie.rs  game_loop.rs  main.rs
battletris-client/src/net/: mod.rs
battletris-client/src/renderer/: bazaar.rs  font.rs  game_over.rs  lobby.rs  mod.rs  playing.rs  title.rs
battletris-engine/: Cargo.toml
battletris-engine/src/: ernie.rs  lib.rs  session.rs
battletris-engine/src/ai/: mod.rs
battletris-engine/src/engine/: board.rs  game_state.rs  mod.rs  piece.rs  score.rs  weapons.rs
battletris-engine/src/protocol/: mod.rs
battletris-renderer/: Cargo.toml
battletris-renderer/src/: bazaar.rs  color.rs  context.rs  font.rs  game_over.rs  layout.rs  lib.rs  playing.rs  primitives.rs  screens.rs  title.rs  widgets.rs
battletris-server/: Cargo.toml
battletris-server/src/: conn.rs  db.rs  elo.rs  http_server.rs  main.rs  server.rs  session.rs  ws_listener.rs
battletris-web/: Cargo.toml  Trunk.toml  index.html
battletris-web/src/: app.rs  input.rs  lib.rs  transport.rs
battletris-web/src/renderer/: mod.rs  overlay.rs  playing.rs  screens.rs
(+16 files in other folders)
