[workspace]
members = [
    "battletris-engine",
    "battletris-client",
    "battletris-server",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1"
rand = { version = "0.8", features = ["small_rng"] }
tokio = { version = "1", features = ["full"] }
