[workspace]
members = [
    "battletris-engine",
    "battletris-renderer",
    "battletris-client",
    "battletris-server",
    "battletris-web",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1"
rand = { version = "0.8", features = ["small_rng"] }
tokio = { version = "1", features = ["full"] }
png = "0.17"

[profile.release]
opt-level = "s"
lto = true
