[package]
name = "battletris-client"
version = "0.1.0"
edition = "2021"

[dependencies]
battletris-engine = { path = "../battletris-engine" }
battletris-renderer = { path = "../battletris-renderer" }
sdl2 = { version = "0.36" }
rand = { workspace = true }
tokio = { workspace = true }
png = { workspace = true }

[features]
# Enable to link against system SDL2 instead of compiling from source
system-sdl2 = []
