[package]
name = "battletris-server"
version = "0.1.0"
edition = "2021"

[dependencies]
battletris-engine = { path = "../battletris-engine" }
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "set-header"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
