[package]
name = "battletris-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d",
    "WebSocket", "MessageEvent", "CloseEvent", "BinaryType",
    "KeyboardEvent", "UiEvent", "Event", "EventTarget",
    "Location",
    "ImageData",
] }
battletris-engine = { path = "../battletris-engine" }
battletris-renderer = { path = "../battletris-renderer" }
bincode = { workspace = true }
serde = { workspace = true }
console_error_panic_hook = "0.1"
rand = { workspace = true }
png = { workspace = true }

